checkpoint commit - usability and completeness scores done

--- a/nyc_open_data_dqs.ipynb
+++ b/nyc_open_data_dqs.ipynb
@@ -1507,7 +1507,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### CALCULATING THE WEIGHT DIMENSIONS\n",
+    "\n",
+    "def calculate_weights(dimensions, method='sr'):\n",
+    "    N = len(dimensions)\n",
+    "    \n",
+    "    if method == 'sr':\n",
+    "        denom = np.array([ ((1 / (i + 1)) + ((N + 1 - (i + 1)) / N)) for i, x in enumerate(dimensions) ]).sum()\n",
+    "        weights = [ ((1 / (i + 1)) + ((N + 1 - (i + 1)) / N)) / denom for i, x in enumerate(dimensions) ]\n",
+    "    elif method == 'rs':\n",
+    "        denom = np.array([ (N + 1 - (i + 1)) for i, x in enumerate(dimensions)]).sum()\n",
+    "        weights = [ (N + 1 - (i + 1)) / denom for i, x in enumerate(dimensions) ]\n",
+    "    elif method == 'rr':\n",
+    "        denom = np.array([ 1 / (i + 1) for i, x in enumerate(dimensions) ]).sum()\n",
+    "        weights = [ (1 / (i + 1)) / denom for i, x in enumerate(dimensions) ]\n",
+    "    elif method == 're':\n",
+    "        exp = 0.2\n",
+    "        denom = np.array([ (N + 1 - (i + 1)) ** exp for i, x in enumerate(dimensions) ]).sum()\n",
+    "        weights = [ (N + 1 - (i + 1)) ** exp / denom for i, x in enumerate(dimensions) ]\n",
+    "    else:\n",
+    "        raise Exception('Invalid weighting method provided')\n",
+    "    \n",
+    "    return weights"
+   ]
   }
  ],
  "metadata": {
